--- a/index.html
+++ b/index.html
@@ -8,3 +8,41 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <title>AI Travel Generator</title>
+    </head>
+<body>
+    <div class="container">
+        <header>
+            <h1>AI TRAVEL GENERATOR</h1>
+        </header>
+
+        <main>
+            <div class="form-container">
+                <form id="content-generator-form">
+                    <input type="text"
+                        placeholder="Enter your topic (e.g., Accommodation, Food and drinks, Activities, Cultures, Travel Destinations, Travel Tips, Weather Forecast)"
+                        autofocus required autocomplete="off" class="instructions" id="user-instructions" />
+
+
+                    <select id="content-type" class="content-type">
+                        <option value="accommodation">Accommodation</option>
+                        <option value="food and drinks">Food and Drinks</option>
+                        <option value="activities">Activities</option>
+                        <option value="cultures">Cultures</option>
+                        <option value="travel">Travel Destination</option>
+                        <option value="travel-tips">Travel Tips</option>
+                        <option value="weather forecast">Weather Forecast</option>
+                    </select>
+
+                    <input type="submit" class="button" value="Generate" />
+                </form>
+                <div class="hint">e.g. Accommodation, Food and Drinks, Activities, Cultures, Travel Destinations, Travel Tips, Weather Forecast</div>
+            </div>
+            <div class="content hidden" id="content">
+                <br>
+            </div>
+        </main>
+        <footer>This AI project was coded with ♥ by <a href="https://github.com/Eugal-git" target="_blank">Eugenia Tunha</a> and is open-sourced on <a href="https://github.com/Eugal-git/AI-TRAVEL-GENERATOR"
+                target="_blank">Github</a> and hosted on <a
+                href="https://app.netlify.com/teams/eugal-git/sites" target="_blank">Netlify</a></footer>
+    </div>
+    <script src="src/index.js"></script>
