--- a/index.html
+++ b/index.html
@@ -46,3 +46,7 @@
                 href="https://app.netlify.com/teams/eugal-git/sites" target="_blank">Netlify</a></footer>
     </div>
     <script src="src/index.js"></script>
+      </script>
+</body>
+
+</html>
